Add functionality to add and remove items to tracker

--- a/src/app/Modules/tracker/components/tracker/tracker.component.html
+++ b/src/app/Modules/tracker/components/tracker/tracker.component.html
@@ -1,1 +1,6 @@
-<p>tracker works!</p>
+<ul>
+  <app-tracker-item *ngFor="let item of trackerService.getItems() | async"
+    [item]="item">
+  </app-tracker-item>
+</ul>
+<app-tracker-item-controls></app-tracker-item-controls>
