Revert "Switch to using vanilla css"
This reverts commit 55a199a6c346f848de0c229ca527611344b1e835.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,43 +1,1 @@
-$base-spacing: 4px;
-
-*, *::before, *::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Roboto, sans-serif;
-  font-size: 1rem;
-}
-
-input, label, button {
-  font-weight: bold;
-}
-
-input {
-  padding: $base-spacing*2;
-  margin: $base-spacing*2;
-  border-radius: 10px;
-}
-
-button {
-  min-width: $base-spacing*20;
-  padding: $base-spacing*2 $base-spacing*5;
-  margin: $base-spacing*2;
-  border-radius: 10px;
-}
-
-.horizontal-form {
-  display: grid;
-  grid-template-columns: min-content auto;
-
-  label {
-    margin: $base-spacing*4 0 $base-spacing*4 $base-spacing*2 ;
-  }
-
-  .form-row {
-    display: contents;
-
-  }
-}
+@import "bulma";
