--- a/src/app/Modules/tracker/components/tracker-item-controls/tracker-item-controls.component.html
+++ b/src/app/Modules/tracker/components/tracker-item-controls/tracker-item-controls.component.html
@@ -1,25 +1,41 @@
 <form [formGroup]="itemForm" (ngSubmit)="addItem()">
-  <div class="horizontal-form">
-    <ng-container *ngTemplateOutlet="subField;
-        context: { $implicit: 'name', displayName: 'Name', type: 'text' }">
-    </ng-container>
-    <div class="form-row">
+  <ng-container *ngTemplateOutlet="subField;
+      context: { $implicit: 'name', displayName: 'Name', type: 'text' }">
+  </ng-container>
+  <div class="field is-horizontal">
+<!--    <div class="field">-->
+    <div class="field-label is-normal">
+      <label class="label">Health</label>
+    </div>
+    <div class="field-body is-expanded">
       <ng-container *ngTemplateOutlet="subField;
-        context: { $implicit: 'health', displayName: 'Health', type: 'number' }">
+        context: { $implicit: 'health', displayName: 'Health', hideLabel: true, type: 'number' }">
       </ng-container>
       <ng-container *ngTemplateOutlet="subField;
         context: { $implicit: 'order', displayName: 'Order', type: 'number' }">
       </ng-container>
     </div>
+<!--    </div>-->
   </div>
   <button class="button" type="submit">Add</button>
 
   <ng-template #subField
                let-ControlName
                let-DisplayName="displayName"
+               let-HideLabel="hideLabel"
                let-InputType="type">
-    <label class="label">{{DisplayName}}</label>
-    <input class="input" [type]="InputType" [formControlName]="ControlName" [placeholder]="DisplayName">
+  <div class="field is-horizontal">
+    <ng-template [ngIf]="!HideLabel">
+      <div class="field-label is-normal">
+        <label class="label">{{DisplayName}}</label>
+      </div>
+    </ng-template>
+    <div class="field-body is-expanded">
+      <div class="control">
+        <input class="input" [type]="InputType" [formControlName]="ControlName" [placeholder]="DisplayName">
+      </div>
+    </div>
+  </div>
   </ng-template>
 
 </form>
