--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <main class="app surface-ground">
-  <router-outlet></router-outlet>
+  <app-top-nav></app-top-nav>
+  <div class="m-5">
+    <router-outlet></router-outlet>
+  </div>
 </main>
