Tweak top-nav styling to fix title and align menu items to right

--- a/src/app/Modules/nav/components/top-nav/top-nav.component.html
+++ b/src/app/Modules/nav/components/top-nav/top-nav.component.html
@@ -2,7 +2,7 @@
   <ng-template pTemplate="start">
     <a routerLink="" class="flex no-underline">
       <img src="assets/images/initiative-icon.svg" height="40" class="mr-2">
-      <span class="font-bold text-primary vertical-align-bottom inline-block">Initiative</span>
+      <span class="font-bold text-primary mt-auto mb-auto">Initiative</span>
     </a>
   </ng-template>
 </p-menubar>
