--- a/src/app/Modules/nav/components/top-nav/top-nav.component.html
+++ b/src/app/Modules/nav/components/top-nav/top-nav.component.html
@@ -1,6 +1,6 @@
 <p-menubar [model]="navItems">
   <ng-template pTemplate="start">
-    <a routerLink="" class="flex no-underline">
+    <a routerLink="/" class="flex no-underline">
       <img src="assets/images/initiative-icon.svg" height="40" class="mr-2">
       <span class="font-bold text-primary mt-auto mb-auto">Initiative</span>
     </a>
