--- a/src/app/Modules/tracker/components/tracker-item-controls/tracker-item-controls.component.html
+++ b/src/app/Modules/tracker/components/tracker-item-controls/tracker-item-controls.component.html
@@ -1,31 +1,49 @@
-<form [formGroup]="itemForm" (ngSubmit)="addItem()"
-      class="grid p-fluid">
-  <div class="col-12">
-    <div class="p-inputgroup">
-      <span class="p-inputgroup-addon">Name</span>
-      <input type="text" pInputText
-            formControlName="name"
-            placeholder="Name">
-    </div>
-  </div>
+<form [formGroup]="itemForm" (ngSubmit)="addItem()">
+<!--      class="grid p-fluid">-->
 
-  <div class="col-12 md:col-6">
-    <div class="p-inputgroup">
-      <span class="p-inputgroup-addon">Health</span>
-      <p-inputNumber formControlName="health"
-            placeholder="Health">
-      </p-inputNumber>
-    </div>
-  </div>
+  <ng-container *ngIf="systemService.selectedSystem() | async as system">
+    <ng-container *ngFor="let field of system.itemModel.dataFields">
+      <div class="p-inputgroup"
+        [ngSwitch]="field.type">
+        <span class="p-inputgroup-addon">{{field.name}}</span>
 
-  <div class="col-12 md:col-6">
-    <div class="p-inputgroup">
-      <span class="p-inputgroup-addon">Order</span>
-      <p-inputNumber formControlName="order"
-                     placeholder="Order">
-      </p-inputNumber>
-    </div>
-  </div>
+        <input *ngSwitchCase="fieldType.text"
+          type="text" pInputText
+          [formControlName]="field.name">
+
+        <p-inputNumber *ngSwitchCase="fieldType.number"
+          [formControlName]="field.name">
+        </p-inputNumber>
+      </div>
+    </ng-container>
+  </ng-container>
+
+<!--  <div class="col-12">-->
+<!--    <div class="p-inputgroup">-->
+<!--      <span class="p-inputgroup-addon">Name</span>-->
+<!--      <input type="text" pInputText-->
+<!--            formControlName="name"-->
+<!--            placeholder="Name">-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <div class="col-12 md:col-6">-->
+<!--    <div class="p-inputgroup">-->
+<!--      <span class="p-inputgroup-addon">Health</span>-->
+<!--      <p-inputNumber formControlName="health"-->
+<!--            placeholder="Health">-->
+<!--      </p-inputNumber>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <div class="col-12 md:col-6">-->
+<!--    <div class="p-inputgroup">-->
+<!--      <span class="p-inputgroup-addon">Order</span>-->
+<!--      <p-inputNumber formControlName="order"-->
+<!--                     placeholder="Order">-->
+<!--      </p-inputNumber>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="col-6 col-offset-3">
     <button pButton type="submit" class="justify-content-center">Add</button>
