Add GameSystemConfigComponent to ConfigPage

--- a/src/app/Modules/config/pages/config-page/config-page.component.html
+++ b/src/app/Modules/config/pages/config-page/config-page.component.html
@@ -1,1 +1,5 @@
-<p>config-page works!</p>
+<p-accordion>
+  <p-accordionTab header="Systems">
+    <app-game-system-config></app-game-system-config>
+  </p-accordionTab>
+</p-accordion>
