Add typesafety for label used in p-dropdown

--- a/src/app/Modules/game-system/components/game-system-config/game-system-config.component.html
+++ b/src/app/Modules/game-system/components/game-system-config/game-system-config.component.html
@@ -1,1 +1,3 @@
-<p-dropdown [options]="systems"  [(ngModel)]="selectedSystem$" optionLabel="systemName"></p-dropdown>
+<p-dropdown [options]="(systemFacade.systems$ | async) ?? []"
+            [(ngModel)]="selectedSystem$"
+            [optionLabel]="optionLabel"></p-dropdown>
