Add GameSystemSelectComponent to top nav

--- a/src/app/Modules/nav/components/top-nav/top-nav.component.html
+++ b/src/app/Modules/nav/components/top-nav/top-nav.component.html
@@ -5,4 +5,7 @@
       <span class="font-bold text-primary mt-auto mb-auto">Initiative</span>
     </a>
   </ng-template>
+  <ng-template pTemplate="end">
+    <app-game-system-select></app-game-system-select>
+  </ng-template>
 </p-menubar>
