Fix GameSystemSelectComponent sending incorrect payload when changing system

--- a/src/app/Modules/game-system/components/game-system-select/game-system-select.component.html
+++ b/src/app/Modules/game-system/components/game-system-select/game-system-select.component.html
@@ -1,5 +1,6 @@
 <p-dropdown [options]="(systemFacade.systems$ | async) ?? []"
             [ngModel]="(systemFacade.selectedSystem$ | async)?.key"
+            [optionValue]="valueName"
             [optionLabel]="labelName"
             (onChange)="systemFacade.changeSystem($event.value)">
 </p-dropdown>
