Build formgroup for GameSystemConfigComponent

--- a/src/app/Modules/game-system/components/game-system-config/game-system-config.component.html
+++ b/src/app/Modules/game-system/components/game-system-config/game-system-config.component.html
@@ -1,3 +1,3 @@
-<p-dropdown [options]="(systemFacade.systems$ | async) ?? []"
+<p-dropdown [options]="systems"
             [(ngModel)]="selectedSystem$"
             [optionLabel]="optionLabel"></p-dropdown>
