Fix width of p-dropdown and p-autocomplete

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,13 @@
 ul {
   list-style: none;
 }
+
+// Fixes width 1% issue with prime components
+.p-inputgroup{
+  p-dropdown, p-autoComplete {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
